--- a/src/css/payBuyList.css
+++ b/src/css/payBuyList.css
@@ -84,8 +84,16 @@ a {
   border: 2px solid #ddd;
   right: 110px;
   top: 70px;
-  color: #0D6EFD;
   cursor: pointer;
+  width: 160px;
+}
+
+.basketPlusImage {
+  position: absolute;
+  top: 85px;
+  right: 123px;
+  height: 30px;
+  width: 30px;
 }
 
 .payBuyList .delBtn {
@@ -95,6 +103,16 @@ a {
   border: 2px solid #ddd;
   right: 110px;
   top: 135px;
+  width: 160px;
+  color: #000;
+}
+
+.delBtnImage {
+  position: absolute;
+  top: 148px;
+  right: 125px;
+  height: 32px;
+  width: 32px;
 }
 
 .payBuyList .reviewBtn {
@@ -104,8 +122,17 @@ a {
   border: 2px solid #ddd;
   right: 110px;
   top: 200px;
-  color: #0D6EFD;
+  color: #000;
   cursor: pointer;
+  width: 160px;
+}
+
+.reviewBtnImage {
+  position: absolute;
+  top: 217px;
+  right: 128px;
+  height: 20px;
+  width: 20px;
 }
 
 .payBuyList .selectBox {
