--- a/src/css/cartItem.module.css
+++ b/src/css/cartItem.module.css
@@ -1,79 +1,9 @@
-.cart {
-  background-color: #ffffff;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-}
-
-.cart .wrap {
-  background-color: #ffffff;
-  height: 1633.06px;
-  position: relative;
-  width: 1440px;
-}
-
-.cart .overlapGroup {
-  height: 90px;
-  width: 1004px;
-  border: none;
-  margin: 40px auto 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.cart .buttonGroup {
-  width: 600px;
-  border: none;
-  margin: 100px auto 0;
-  display: flex;
-  justify-content: space-between;
-}
-
-.cart .button {
-  background-color: #eeeeeeee;
-  height: 70px;
-  width: 250px;
-  border: none;
-  position: relative;
-}
-
-.cart .buttonText {
-  color: #000000;
-  
-  font-size: 20px;
-  font-weight: 600;
-  left: 50px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 20px;
-  white-space: nowrap;
-  width: 150px;
-  border: none;
-}
-
-.cart .textWrapper {
-  color: #000000;
-  
-  font-size: 44.2px;
-  font-weight: 400;
-  left: 48px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  top: 15px;
-  white-space: nowrap;
-  width: 185px;
-  border: none;
-}
-
 .cartItem {
   border-bottom: 1px solid #ddd;
   height: 241px;
   overflow: hidden;
   width: 1377px;
-  margin: 40px auto 0;
+  margin: 20px auto 0;
   box-sizing: border-box;
   display: flex;
   justify-content: center;
@@ -99,19 +29,17 @@
 }
 
 .group1 {
-  background-color: #ffffff;
-  border: 1px solid;
-  border-color: #000000;
-  height: 48px;
+  background-color: #eee;
+  height: 50px;
   left: 215px;
   position: absolute;
-  top: -5px;
+  top: -8px;
   width: 120px;
+  border-radius: 5px;
 }
 
 .cartProductStock {
   color: #000000;
-  
   font-size: 30px;
   font-weight: 400;
   right: 20px;
@@ -124,8 +52,7 @@
 }
 
 .countUp {
-  color: #000000;
-  
+  color: #ff7d9e;
   font-size: 16px;
   font-weight: 400;
   left: 5px;
@@ -138,8 +65,7 @@
 }
 
 .countDown {
-  color: #000000;
-  
+  color: #ff7d9e;
   font-size: 16px;
   font-weight: 400;
   left: 5px;
@@ -151,20 +77,11 @@
   border: none;
 }
 
-.cart .image-box-3 {
-  height: 28px;
-  left: 0;
-  position: absolute;
-  top: 28px;
-  width: 45px;
-}
-
 .cartProductPrice {
   color: #000000;
-  
   font-size: 22px;
   font-weight: 600;
-  left: 40px;
+  left: 30px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
@@ -174,20 +91,19 @@
 
 .isBuyCheckBox {
   background-color: #ffffff;
-  height: 30px;
+  height: 25px;
   left: 41px;
   position: absolute;
   top: 95px;
-  width: 30px;
+  width: 25px;
 }
 
 .cartProductName {
   color: #000000;
-  
   font-size: 20px;
-  left: 360px;
+  left: 375px;
   position: absolute;
-  top: 90px;
+  top: 105px;
   width: 180px;
   overflow: hidden;
   white-space: normal;
@@ -208,7 +124,6 @@
 
 .cartCarryPrice {
   color: #000000;
-  
   font-size: 22px;
   font-weight: 600;
   left: 18px;
@@ -221,7 +136,6 @@
 
 .cartProductSizeColor {
   color: #000000;
-  
   font-size: 22px;
   font-weight: 600;
   left: 380px;
@@ -240,92 +154,16 @@
   text-align: center;
   line-height: normal;
   position: absolute;
-  top: 5px;
+  top: 3px;
   width: 225px;
 }
 
 .cart .title {
   color: #000000;
-  
   font-size: 30px;
   font-weight: 400;
   letter-spacing: 0;
   line-height: normal;
   padding-top: 121px;
   text-align: center;
-}
-
-.cart .cartBar {
-  background-color: #eeeeeeee;
-  margin: 80px auto 0;
-  height: 60px;
-  width: 1377px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  box-sizing: border-box;
-  position: relative;
-  
-}
-
-.cart .cartBar .productImage {
-  font-family: "Inter-Light", Helvetica;
-  font-size: 20px;
-  font-weight: 600;
-  height: 46px;
-  left: 170px;
-  position: absolute;
-  text-align: center;
-  top: 17px;
-}
-
-.cart .productName {
-  font-family: "Inter-Light", Helvetica;
-  font-size: 20px;
-  font-weight: 600;
-  height: 46px;
-  left: 395px;
-  position: absolute;
-  text-align: center;
-  top: 17px;
-}
-
-.cart .productPrice {
-  font-family: "Inter-Light", Helvetica;
-  font-size: 20px;
-  font-weight: 600;
-  height: 46px;
-  left: 600px;
-  position: absolute;
-  text-align: center;
-  top: 17px;
-}
-
-.cart .productStock {
-  font-family: "Inter-Light", Helvetica;
-  font-size: 20px;
-  font-weight: 600;
-  height: 46px;
-  left: 800px;
-  position: absolute;
-  text-align: center;
-  top: 17px;
-}
-
-.cart .sumPay {
-  font-family: "Inter-Light", Helvetica;
-  font-size: 20px;
-  font-weight: 600;
-  height: 46px;
-  left: 1200px;
-  position: absolute;
-  top: 17px;
-}
-
-.cart .buyCheckBox {
-  background-color: #ffffff;
-  height: 30px;
-  left: 42px;
-  position: absolute;
-  width: 30px;
 }
