main 정렬에 대한 css 수정

--- a/src/main.css
+++ b/src/main.css
@@ -60,15 +60,24 @@
 .main .inner .div p {
   margin: 0 10px;
 }
+.main .inner .div .order {
+  border-right: 1px solid black;
+}
+.main .inner .div .order p {
+  margin-right: 25px;
+}
 
 .main .inner .div .sort {
   margin-right: 140px;
 }
+
+.main .inner .div .sort p {
+  margin-left: 25px;
+}
+
 .main .inner .div p span {
-  margin: 0 10px;
+  margin: 0 5px;
   padding: 5px;
-  border-left: 1px solid #ddd;
-  border-right: 1px solid #ddd;
   cursor: pointer;
 }
 .main .wrap {
