--- a/src/css/productList.css
+++ b/src/css/productList.css
@@ -23,6 +23,7 @@
   align-items: center;
   flex-wrap: wrap;
   padding: 20px;
+  min-height: 656px;
 }
 
 .productList .productWrap .link {
@@ -32,4 +33,12 @@
 .productList .productWrap .link .product {
   max-width: 240px;
   width: 100%;
+}
+
+.productList .guide {
+  width: 100%;
+  height: 100%;
+  font-size: 48px;
+  color: #575757;
+  text-align: center;
 }
