--- a/src/css/productDescription.css
+++ b/src/css/productDescription.css
@@ -26,6 +26,9 @@
 }
 
 .productInfo .productDecription {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   margin-top: 80px;
   background-color: inherit;
   width: 1328px;
@@ -33,7 +36,6 @@
 }
 
 .productInfo .moreInfo {
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), white);
   height: 117px;
   width: 1322px;
   cursor: pointer;
@@ -46,7 +48,7 @@
 
 .productInfo .descriptionBox {
   display: block;
-  width: 100%;
+  width: 550px;
 }
 
 .productInfo .descriptionImg {
@@ -65,6 +67,7 @@
 .productInfo .moreButton {
   width: 250px;
   border-radius: 150px;
+  border : 1px solid black;
   padding: 10px;
   background-color: white;
   color: #000000;
