제품 상세보기 페이지에서 제품명에 말줄임표 생기는 현상 삭제

--- a/src/css/productDetailDescription.css
+++ b/src/css/productDetailDescription.css
@@ -124,6 +124,8 @@
   width: 150px;
   font-size: 26px;
   text-align: start;
+  overflow: unset;
+  text-overflow: unset;
 }
 
 .productdetail .color {
