--- a/src/css/productAdd.css
+++ b/src/css/productAdd.css
@@ -37,10 +37,6 @@
   font-size: 18px;
 }
 
-.productAdd .inner .wrap .boxWrap .box:first-of-type {
-  margin-left: 5px;
-}
-
 .productAdd .inner .wrap .box {
   display: flex;
   justify-content: space-between;
@@ -136,15 +132,25 @@
 }
 
 .productAdd .inner .wrap.img .boxWrap {
-  justify-content: flex-start;
-  flex-flow: wrap;
-  margin-left: 60px;
+  display: flex;
+  align-items: flex-start;
+  flex-flow: wrap column;
+  margin-left: 10px;
   margin-bottom: 10px;
 }
+.productAdd .inner .wrap.img .div {
+  display: flex;
+  flex-flow: nowrap;
+  margin: 10px 0;
+}
 
+.productAdd .inner .wrap.img .boxWrap label {
+  display : flex;
+  align-items: center;
+}
 .productAdd .inner .wrap.img .boxWrap .addImg {
   padding: 2px 8px;
-  margin-left: 200px;
+  margin-left: 10px;
   border-radius: 5px;
   background-color: #d4e5ff;
   color: #0d6efd;
@@ -153,7 +159,6 @@
 
 .productAdd .inner .wrap.img .boxWrap .addImg:hover {
   padding: 2px 8px;
-  margin-left: 200px;
   border-radius: 5px;
   background-color: #0d6efd;
   color: #fff;
