--- a/src/css/productEdit.css
+++ b/src/css/productEdit.css
@@ -37,10 +37,6 @@
   font-size: 18px;
 }
 
-.productEdit .inner .wrap .boxWrap .box:first-of-type {
-  margin-left: 5px;
-}
-
 .productEdit .inner .wrap .box {
   display: flex;
   justify-content: space-between;
@@ -140,16 +136,27 @@
 }
 
 .productEdit .inner .wrap.img .boxWrap {
-  justify-content: flex-start;
-  flex-flow: wrap;
-  margin-left: 60px;
+  align-items: flex-start;
+  flex-flow: wrap column;
+  margin: 10px 10px;
   margin-bottom: 10px;
+}
+
+.productEdit .inner .wrap.img .div {
+  display: flex;
+  flex-flow: nowrap;
+  margin: 10px 0;
+}
+
+.productEdit .inner .wrap.img .boxWrap label {
+  display: flex;
+  align-items: center;
 }
 
 .productEdit .inner .wrap.img .boxWrap .addImg {
   padding: 2px 8px;
   border-radius: 5px;
-  margin-left : 60px;
+  margin-left: 10px;
   background-color: #d4e5ff;
   color: #0d6efd;
   font-weight: 600;
